[package]
name = "hub"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
gitlab = "0.1804.0"
newswrap = "0.1.6"
reqwest = "0.12.24"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rust-embed = { version = "8.8.0", features = ["debug-embed"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wiki = "0.0.3"
